need to fix buttons alignment

--- a/checkout.css
+++ b/checkout.css
@@ -35,28 +35,29 @@ body {
 
 .pay-buttons {
   display: flex;
-  align-items: center;
+  /* align-items: left; */
   gap: 20px;
-  margin-top: 20px;
+  justify-content: flex-start;
+  width: 100%;
+margin-left: 15px;
+
+
+
 }
 
 .pay-btn {
     width: 200px; 
     height: 50px;    
     object-fit: contain;   
-    border-radius: 30px;   
     cursor: pointer;
+    /* display: block; */
+    margin: 0;
+
 }
-.pay-btn.apple {
+.pay-btn.apple, .pay-btn.google {
     border: none;
-    background: none;     
+    background: none;   
 }
-
-
-.pay-btn.google {
-    border: 1px solid #D9D9D9;
-    background: white;
-} 
 
 /* Left column */
 .product-column {
@@ -94,9 +95,13 @@ body {
   /* color: #000000; */
 }
 
-/* Right column */
+/* Right column - delivery section*/
 .details-column {
   flex: 2;
+  /* display: flex;
+  flex-direction: column; */
+
+
 }
 
 .quantity {
@@ -165,9 +170,16 @@ textarea:focus {
   border-radius: 8px;
   margin-bottom: 30px;
   border: 2px solid #D9D9D9;
+  
 
 }
 
+/* .delivery-section .pay-buttons {
+    padding-left: 0;
+    justify-content: flex-start;
+    margin-left: -15px;
+    width: calc(100% + 15px);
+} */
 
 button {
   background-color: #2C2C2C; 
@@ -224,6 +236,10 @@ label {
   margin-bottom: 5px;
 }
 
+.card-fields button {
+  width: 100%;
+  margin-top: 10px;
+}
 
 .card-fields {
   background-color: #f9f9f9;
